feat(oagw): wire credstore SDK into OAGW, replacing InMemoryCredentialResolver
- Add credstore-sdk dependency and "credstore" to module deps
- Thread SecurityContext into AuthContext for tenant-scoped secret resolution
- Rewrite ApiKeyAuthPlugin to use CredStoreClientV1 with cred:// prefix stripping
- Remove legacy CredentialResolver trait, InMemoryCredentialResolver, and credentials config field
- Replace test infrastructure with MockCredStoreClient; all 176 tests pass

Signed-off-by: Raudur Refur <refur@tutamail.com>

--- a/modules/system/oagw/oagw/Cargo.toml
+++ b/modules/system/oagw/oagw/Cargo.toml
@@ -38,6 +38,7 @@ gts = { workspace = true }
 utoipa = { workspace = true }
 types-registry-sdk = { workspace = true }
 authz-resolver-sdk = { workspace = true }
+credstore-sdk = { workspace = true }
 # CP deps
 dashmap = { workspace = true }
 thiserror = { workspace = true }
