--- a/modules/system/oagw/oagw-sdk/Cargo.toml
+++ b/modules/system/oagw/oagw-sdk/Cargo.toml
@@ -13,20 +13,20 @@ default = []
 axum = ["dep:axum"]
 
 [dependencies]
-uuid = { version = "1", features = ["v4", "serde"] }
-thiserror = "2.0"
-http = "1.3"
-bytes = "1"
-async-trait = "0.1"
-futures-core = "0.3"
-futures-util = "0.3"
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
-tracing = "0.1"
+uuid = { workspace = true, features = ["v4", "serde"] }
+thiserror = { workspace = true }
+http = { workspace = true }
+bytes = { workspace = true }
+async-trait = { workspace = true }
+futures-core = { workspace = true }
+futures-util = { workspace = true, features = ["sink"] }
+serde = { workspace = true, features = ["derive"] }
+serde_json = { workspace = true }
+tracing = { workspace = true }
 modkit-security = { workspace = true }
-axum = { version = "0.8", features = ["ws"], optional = true }
+axum = { workspace = true, features = ["ws"], optional = true }
 
 [dev-dependencies]
-tokio = { version = "1", features = ["macros", "rt", "sync"] }
-async-trait = "0.1"
-axum = { version = "0.8", features = ["ws"] }
+tokio = { workspace = true, features = ["macros", "rt", "sync"] }
+async-trait = { workspace = true }
+axum = { workspace = true, features = ["ws"] }
