--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -1,8 +1,12 @@
 name: e2e
 
 on:
-  push:
-    branches: ["main"]
+  pull_request:
+    branches: [main]
+    paths-ignore:
+      - '**/*.md'
+      - 'docs/**'
+      - 'guidelines/**'
   schedule:
     - cron: "0 2 * * *" # nightly full E2E at 02:00 UTC
   workflow_dispatch:
@@ -47,16 +51,16 @@ jobs:
 
       - name: Run E2E tests
         run: |
-          if [ "${{ github.event_name }}" = "push" ]; then
-            make e2e-smoke
-          elif [ "${{ github.event_name }}" = "workflow_dispatch" ] && [ "${{ inputs.mode }}" = "smoke" ]; then
-            make e2e-smoke
+          if [ "${{ github.event_name }}" = "schedule" ]; then
+            make e2e-local            # nightly — full suite
+          elif [ "${{ github.event_name }}" = "workflow_dispatch" ] && [ "${{ inputs.mode }}" = "full" ]; then
+            make e2e-local            # manual — full suite
           else
-            make e2e
+            make e2e-local            # PR / manual-smoke, TODO: switch to e2e-local-smoke later
           fi
 
-      - name: Create or update issue on smoke failure
-        if: failure() && github.event_name == 'push'
+      - name: Create or update issue on nightly failure
+        if: failure() && github.event_name == 'schedule'
         uses: actions/github-script@f28e40c7f34bde8b3046d885e986cb6290c5673b # v7.1.0
         with:
           script: |
@@ -92,10 +96,10 @@ jobs:
               }
             }
 
-            const title = "E2E smoke failed on main";
+            const title = "Nightly E2E failed";
             const runUrl = `${context.serverUrl}/${owner}/${repo}/actions/runs/${context.runId}`;
             const body = [
-              "Smoke E2E tests failed on `main`.",
+              "Nightly E2E tests failed.",
               "",
               `- Commit: ${sha}`,
               `- Assigned to (latest commit author): @${assignee}`,
@@ -103,7 +107,7 @@ jobs:
             ].join("\n");
 
             const search = await github.rest.search.issuesAndPullRequests({
-              q: `repo:${owner}/${repo} is:issue is:open in:title "${title}" label:e2e-smoke`,
+              q: `repo:${owner}/${repo} is:issue is:open in:title "${title}" label:e2e-nightly`,
               per_page: 1,
             });
 
@@ -122,12 +126,7 @@ jobs:
                 repo,
                 title,
                 body,
-                labels: ["bug", "e2e-smoke", "ci"],
+                labels: ["bug", "e2e-nightly", "ci"],
               });
               await tryAssign(created.data.number);
             }
-
-      # cleans up stopped containers, dangling build cache, and unused networks.
-      - name: Docker cleanup
-        if: always()
-        run: docker system prune --force
